# Tata_innovent

./: .gitignore  README.md  filter_nuscenes.py  pyproject.toml  requirements.txt
actuation/: reflex_actuator.hpp  reflex_actuator.py
data/: __init__.py  channel_stacker.py  imu_compensator.py  nuscenes_dataset.py  radar_projector.py
inference/: batch_inference.py  export_onnx.py  tensorrt_engine.py
mcp/: mcp_dispatcher.py  mcp_server_stub.py
model/: train.py  yolo11n_5ch.py  yolo11n_5ch.yaml
pipeline/: think_fast_pipeline.py
tests/: test_fusion.py  test_model.py  test_threat.py
threat/: threat_matrix.cpp  threat_matrix.hpp  threat_matrix.py
